# pg-neo-graph-rl

./: .dockerignore  .editorconfig  .env.example  .gitignore  .license-header.txt  .markdownlint.json  .pre-commit-config.yaml  ARCHITECTURE.md  AUTONOMOUS_EXECUTION_COMPLETION_REPORT.md  AUTONOMOUS_IMPLEMENTATION_FINAL_REPORT.md  AUTONOMOUS_IMPLEMENTATION_REPORT.md  AUTONOMOUS_RESEARCH_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  BACKLOG.md  BREAKTHROUGH_AUTONOMOUS_EXECUTION_REPORT.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  Dockerfile  FINAL_AUTONOMOUS_EXECUTION_REPORT.md  FINAL_IMPLEMENTATION_GUIDE.md  GITHUB_ACTIONS_SETUP_REQUIRED.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_CHARTER.md  README.md  RESEARCH_BREAKTHROUGH_SUMMARY.md  RESEARCH_COMPLETION_REPORT.md  SECURITY.md  bandit_report.json  basic_federated_demo.py  breakthrough_validation_summary.json  coverage.json  direct_test.py  docker-compose.production.yml  docker-compose.yml  pyproject.toml  (+20 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: production-deployment.yml
.terragon/: autonomous-executor.py  config.yaml  execute-core-implementation.py  execution-metrics.json  value-engine.py
config/: README.md
deploy/: Dockerfile  docker-compose.yml  kubernetes.yml  production_deployment_guide.md
deployment/: Dockerfile  docker-compose.production.yml  docker-compose.yml  healthcheck.py  production.yml  production_deployment.py  production_deployment_guide.md  production_setup.sh
deployment/config/: training_config.yaml
deployment/docker/: Dockerfile  docker-compose.yml
deployment/kubernetes/: application.yaml  hpa.yaml  namespace.yaml
deployment/monitoring/: alert_rules.yml  prometheus.yml
deployment/scripts/: deploy.sh  rollback.sh
deployment/terraform/: main.tf  variables.tf
docker/: alertmanager.yml  docker-compose.monitoring.yml  prometheus.yml  prometheus_rules.yml
docker/grafana/dashboards/: pg-neo-overview.json
docker/grafana/provisioning/dashboards/: dashboard.yml
docker/grafana/provisioning/datasources/: prometheus.yml
docs/: API_DOCUMENTATION.md  AUTOMATION.md  DEPLOYMENT.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_GUIDE.md  PROJECT_CHARTER.md  ROADMAP.md  SECURITY_GUIDE.md  TROUBLESHOOTING.md  conf.py  index.rst
docs/adr/: 0001-use-jax-for-ml-backend.md  0002-gossip-protocol-for-federated-learning.md  0003-graph-neural-network-architecture.md  001-federated-architecture.md  README.md  template.md
docs/guides/: README.md
docs/monitoring/: README.md  health-checks.md
docs/runbooks/: README.md  deployment.md  incident-response.md
docs/workflows/: README.md  SETUP_GITHUB_ACTIONS.md  SETUP_REQUIRED.md  ci-cd-setup.md  production-deployment.yml
docs/workflows/examples/: cd.yml  ci.yml  dependency-update.yml  security-scan.yml
examples/: basic_traffic_example.py  basic_usage.py  breakthrough_demo.py  demo.py  robust_demo.py  scaling_demo.py  simple_demo.py
monitoring/prometheus/: prometheus.yml
pg_neo_graph_rl/: __init__.py  cli.py  env.py  policy.py  trainer.py
pg_neo_graph_rl/algorithms/: __init__.py  graph_ppo.py  graph_sac.py
pg_neo_graph_rl/communication/: __init__.py  advanced_protocols.py  aggregation.py  gossip.py
pg_neo_graph_rl/core/: __init__.py  federated.py  types.py
pg_neo_graph_rl/environments/: __init__.py  power_grid.py  swarm.py  traffic.py
pg_neo_graph_rl/monitoring/: __init__.py  advanced_metrics.py  alerting.py  health.py  logging_config.py  metrics.py  real_time_dashboard.py  tracing.py
pg_neo_graph_rl/networks/: __init__.py  graph_networks.py  temporal_attention.py
pg_neo_graph_rl/optimization/: __init__.py  advanced_cache.py  auto_scaler.py  auto_scaling.py  cache.py  distributed_compute.py  memory.py  performance.py  performance_profiler.py  production_optimizer.py  quantum_optimized_federated.py
pg_neo_graph_rl/research/: __init__.py  adaptive_topology.py  autonomous_meta_learning.py  causal_architecture_search.py  causal_aware_federated_learning.py  causal_discovery.py  experimental_framework.py  experimental_validation_framework.py  multimodal_fusion.py  neuromorphic_computing.py  neuromorphic_quantum_hybrid.py  performance_optimization.py  publication_benchmarking_suite.py  quantum_causal_federated_learning.py  quantum_optimization.py  self_evolving_architectures.py  temporal_memory.py
pg_neo_graph_rl/training/: __init__.py  cli.py  config.py  trainer.py
pg_neo_graph_rl/utils/: __init__.py  backup.py  circuit_breaker.py  exceptions.py  fault_tolerance.py  health.py  logging.py  security.py  validation.py
scripts/: automated_reporting.py  automation_orchestrator.py  build.py  build.sh  deploy.py  docker-utils.sh  integration_manager.py  metrics_collector.py  monitoring_dashboard.py  release.py  setup_dev.sh
sentiment_analyzer_pro/: __init__.py
sentiment_analyzer_pro/api/: __init__.py  app.py  models.py
sentiment_analyzer_pro/core/: __init__.py  analyzer.py  base.py
sentiment_analyzer_pro/models/: __init__.py  bert.py
sentiment_analyzer_pro/optimization/: __init__.py  cache.py  memory.py  performance.py
sentiment_analyzer_pro/preprocessing/: __init__.py  text_processor.py
sentiment_analyzer_pro/utils/: __init__.py  device_manager.py  exceptions.py  health.py  logging.py  security.py  validation.py
src/pg_neo_graph_rl/: __init__.py
tests/: __init__.py  conftest.py  test_basic_functionality.py  test_basic_integration.py  test_comprehensive_suite.py  test_core_functionality.py  test_graph_rl.py  test_production_suite.py  test_scalability_performance.py  utils.py
tests/benchmarks/: __init__.py  test_performance.py
tests/fixtures/: __init__.py  graph_data.py  test_data.py
tests/integration/: __init__.py  test_end_to_end.py  test_federated_learning.py  test_graph_environments.py
tests/unit/: test_graph_utils.py  test_import.py  test_sample.py
