[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pg-neo-graph-rl"
version = "0.2.0"
description = "Policy gradient reinforcement learning on dynamic graph-structured environments"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Daniel Schmidt", email = "danschmidt88@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["torch>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
